# C2S-Scale-Gemma

./: .dockerignore  .env.example  .gitignore  Dockerfile  PROJECT_PLAN.md  README.md  build_docker.sh  cloudbuild.yaml  colab_setup.py  plan.md  pyproject.toml
.cursor/rules/: continue-build-with-tests.mdc
configs/: ablations.toml  cancer_research.toml  colab_7b.toml  datasets.toml  reprogramming_profiles.toml  validation_tracks.toml  vertex_27b.toml
docs/: uhg_api.md
notebooks/: c2s_scale_gemma_production.ipynb  colab_prototype.ipynb
scripts/: align_dual_encoder.py  build_cancer_graphs.py  build_graphs.py  build_manifold_refactor_plan.py  build_validation_data_manifest.py  build_validation_review_protocol.py  cancer_research_pipeline.py  check_validation_profile.py  colab_setup.py  compare_oskm_perturbation_embeddings.py  create_vertex_deployment.py  download_cancer_data.py  download_data.py  evaluate.py  evaluate_cell_type_prediction.py  export_artifacts.py  export_validation_bundle_artifacts.py  export_validation_explorer.py  export_validation_trajectory_dataset.py  export_validation_trajectory_geometry.py  export_validation_trajectory_projection.py  finetune_lora.py  generate_oskm_perturbation_report.py  inspect_validation_dataset.py  perturb_oskm_expression.py  plot_validation_bundle.py  plot_validation_trajectory_projection.py  pretrain_hgnn.py  pretrain_uhg_hgnn.py  qa_validation_artifacts.py  render_validation_explorer.py  render_validation_trajectory_projection.py  report_manifold_readiness.py  report_validation_calibration.py  report_validation_readiness.py  review_validation_artifacts.py  run_alignment_ablation.py  run_validation_bundle.py  screen_regulatory_pathways.py  select_regulatory_candidates.py  (+3 more)
src/biology/: oskm.py  panels.py  perturbation.py  regulatory_screening.py
src/data/: collate.py  dataset.py
src/eval/: alignment_ablation.py  cancer_tasks.py  embedding_shift.py  graph_tasks.py  manifold_readiness.py  manifold_refactor_plan.py  metrics.py  perturbation_report.py  regulatory_screening_report.py  reprogramming_metrics.py  reprogramming_profiles.py  reprogramming_visuals.py  tasks.py  validation_artifact_review.py  validation_bundle_exports.py  validation_calibration.py  validation_data_manifest.py  validation_dataset_inspector.py  validation_explorer.py  validation_explorer_html.py  validation_markdown.py  validation_preflight.py  validation_profile_check.py  validation_projection_visuals.py  validation_readiness.py  validation_review_protocol.py  validation_summary.py  validation_tracks.py  validation_trajectory_dataset.py  validation_trajectory_geometry.py  validation_trajectory_projection.py  validation_trajectory_projection_html.py  validation_visuals.py
src/fusion/: align_losses.py  cancer_trainer.py  heads.py  trainer.py
src/graphs/: build_grn.py  build_knn.py  build_lr_bipartite.py  utils.py
src/hgnn/: cancer_encoder.py  encoder.py  layers.py  losses.py  manifold_ops.py  uhg_hgnn_encoder.py
src/text/: adapters.py  c2s_gemma_loader.py  cancer_gemma_loader.py  gemma_loader.py  pooling.py
src/uhg_adapters/: euclid_to_uhg.py  radial_projector.py  sampling.py
tests/: test_align_losses.py  test_alignment_ablation.py  test_compat_helpers.py  test_dual_encoder_trainer.py  test_embedding_shift.py  test_manifold_ops.py  test_manifold_readiness.py  test_manifold_refactor_plan.py  test_marker_panels.py  test_oskm_perturbation.py  test_oskm_phase_b.py  test_perturbation_report.py  test_regulatory_screening.py  test_regulatory_screening_report.py  test_reprogramming_metrics.py  test_reprogramming_profiles.py  test_reprogramming_visuals.py  test_validation_artifact_review.py  test_validation_bundle_exports.py  test_validation_calibration.py  test_validation_data_manifest.py  test_validation_dataset_inspector.py  test_validation_explorer.py  test_validation_explorer_html.py  test_validation_markdown.py  test_validation_preflight.py  test_validation_profile_check.py  test_validation_projection_visuals.py  test_validation_readiness.py  test_validation_review_protocol.py  test_validation_summary.py  test_validation_tracks.py  test_validation_trajectory_dataset.py  test_validation_trajectory_geometry.py  test_validation_trajectory_projection.py  test_validation_trajectory_projection_html.py  test_validation_visuals.py
